--- a/app/src/styles/profile.css
+++ b/app/src/styles/profile.css
@@ -17,7 +17,7 @@
 .profile p {
   font-size: 1.2em;
   line-height: 1.5em;
-  color: #666;
+  color: #554d56;
   margin-bottom: 40px;
 }
 
